# HuyShopProductService/src/main/resources/openapi.yml
@@ -18,12 +18,11 @@ paths:
         200:
           description: Ok
           content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Category'
             application/json:
               schema:
-                $ref: '#/components/schemas/Category'
+                items:
+                  type: array
+                  $ref: '#/components/schemas/Category'
         400:
           description: Invalid ID supplied
           content: {}
@@ -54,9 +53,6 @@ paths:
         200:
           description: Ok
           content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Category'
             application/json:
               schema:
                 $ref: '#/components/schemas/Category'
@@ -89,17 +85,11 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Category'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/Category'
         required: true
       responses:
         200:
           description: Ok
           content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Category'
             application/json:
               schema:
                 $ref: '#/components/schemas/Category'
@@ -129,9 +119,6 @@ paths:
         200:
           description: Ok
           content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Category'
             application/json:
               schema:
                 $ref: '#/components/schemas/Category'
@@ -168,6 +155,32 @@ paths:
         404:
           description: Category not found
           content: {}
+
+  /product/all:
+    get:
+      tags:
+        - HuyShop
+      summary: ALL PRODUCT
+      operationId: getAllProduct
+      responses:
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                items:
+                  type: array
+                  $ref: '#/components/schemas/Product'
+        400:
+          description: Invalid ID supplied
+          content: {}
+        404:
+          description: Product not found
+          content: {}
+        405:
+          description: Validation exception
+          content: {}
+
   /product:
     post:
       tags:
@@ -180,17 +193,11 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Product'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/Product'
         required: true
       responses:
         200:
           description: Ok
           content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Product'
             application/json:
               schema:
                 $ref: '#/components/schemas/Product'
@@ -203,6 +210,7 @@ paths:
         405:
           description: Validation exception
           content: {}
+
   /product/{id}:
     put:
       tags:
@@ -223,17 +231,11 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Product'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/Product'
         required: true
       responses:
         200:
           description: Ok
           content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Product'
             application/json:
               schema:
                 $ref: '#/components/schemas/Product'
@@ -246,7 +248,35 @@ paths:
         405:
           description: Validation exception
           content: {}
-
+    get:
+      tags:
+        - HuyShop
+      summary: FIND PRODUCT BY ID
+      operationId: findByProductId
+      parameters:
+        - name: id
+          in: path
+          description: ID of product to return
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Product'
+        400:
+          description: Invalid ID supplied
+          content: {}
+        404:
+          description: Category not found
+          content: {}
+        405:
+          description: Validation exception
+          content: {}
 
     delete:
       tags:
@@ -309,7 +339,7 @@ components:
           type: integer
           format: int64
         categoryId:
-          type: object
+          type: Category
 
 
 
